many changes to accommodate python module with resources. Also properly added scripts that can be ran

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,6 @@
 [build-system]
 requires = [
     "setuptools >= 40.6.0",
-    "wheel",
-    "pyserial",
-    "tqmd",
-    "numpy"
+    "wheel"
 ]
 build-backend = "setuptools.build_meta"
