--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,7 @@
 [metadata]
-name = uMUX_IF_Chain
+name = uMUX_IF_Chain_SW
 author = Dark Tyr
-# author_email = tyrofthedark@gmail.com
-version = attr: uMUX_IF_Chain.__version__
+version = 0.0.0
 description = Microwave Multiplexer Intermediate Frequency Conversion Chain Control Software
 long_description = file: README.md
 long_description_content_type = text/x-md
@@ -23,11 +22,15 @@ include_package_data = true
 install_requires =
     setuptools
     importlib_resources
-
+    numpy
+    tqmd
+    pyserial
 
 [options.entry_points]
 console_scripts =
-    resources-example = myapp:main
+    uMux_IF_Chain-startup_script = uMux_IF_Chain.scripts.startup_script:main
+    uMux_IF_Chain-test_script = uMux_IF_Chain.scripts.test_script:main
+    uMux_IF_Chain-simple_gui = uMux_IF_Chain.scripts.simple_gui:main
 
 [bdist_wheel]
 universal = 1
